[package]
name = "tcxtest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/astoycos/aya", branch = "tcx", features = ["async_tokio"] }
aya-log = { git = "https://github.com/astoycos/aya", branch = "tcx" }
tcxtest-common = { path = "../tcxtest-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "tcxtest"
path = "src/main.rs"
